# python3-training

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Lock_rotation_algorithm.md  README.md  cw-duplicate-encoder.py  eight-queens.py  exercices.py  fibo.py  pyproject.toml  training.py
.github/: dependabot.yml
brilliant/: caesar-dataviz.py  lock_optimizer.py  sticks.py  test-2.py  turtle-1.py  turtle-2.py  turtle-3.py  turtle-4.py  turtle-5.py  turtle-test.py
codewars/: __init__.py  calculating_with_functions.py  duplicate_encoder.py
lock_optimizer/: Lock_rotation_algorithm.md  Lock_rotation_algorithm_weighted.md  lock_optimizer.py  lock_optimizer_weighted.py
