[tool.poetry]
name = "python3-training"
version = "0.1.0"
description = "Python 3 training ground"
authors = ["Farzad FARID <farzy@farzy.org>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.10"
bs4 = "*"
requests = "*"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
