[project]
name = "python3-training"
version = "0.1.0"
description = "Python 3 training ground"
authors = [
    {name = "Farzad FARID", email = "farzy@farzy.org"},
]
license = {text = "Apache License 2.0"}
requires-python = "<4.0,>=3.10"
dependencies = [
    "bs4",
    "requests",
    "matplotlib<4.0.0,>=3.5.2",
]

[tool.uv]
default-groups = []

[dependency-groups]
dev = []
